# django-styled-forms

./: .gitignore  LICENSE  README.rst  setup.cfg
styled_forms/: apps.py  decorators.py  styles.py  utils.py
styled_forms/forms/: __init__.py  examples.py  forms.py
styled_forms/templatetags/: form_styles.py
